charts/central-dashboard/v1.0.0/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $2
spec:
  rules:
  - host: npa-elb-681193061.us-west-2.elb.amazonaws.com 
    http:
      paths:
      - backend:
          serviceName: central-dashboard-service
          servicePort: 3030
        path: "/dashboard(/|$)(.*)"
